--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,6 +22,15 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  build:
+  - uses: actions/checkout@v1
+  - name: Use Node.js ${{ matrix.node-version }}
+    uses: actions/setup-node@v1
+    with:
+      node-version: ${{ matrix.node-version }}
+  - name: npm install and npm test
+    run: |
+      npm run build
   # Single deploy job since we're just deploying
   deploy:
     environment:
