--- a/static/manifest.json
+++ b/static/manifest.json
@@ -16,7 +16,7 @@
   ],
   "background_color": "#546dd2",
   "display": "standalone",
-  "scope": "/",
+  "scope": "/svelte-flowbite-boilerplate/",
   "theme_color": "#546dd2",
   "shortcuts": [],
   "description": "Edit this information in static/maifest.json"
