--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "svelte-flowbite-boilerplate",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "author": {
+    "url": "https://neoan.us",
+    "name": "Neoan"
+  },
+  "bin": {
+    "svelte-flowbite-boilerplate": "bin/index.cjs"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
@@ -20,7 +27,9 @@
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "cross-spawn": "^7.0.3",
+    "command-exists": "^1.2.9"
   },
   "type": "module",
   "dependencies": {
