--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-flowbite-boilerplate",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "scripts": {
     "dev": "vite dev",
@@ -18,33 +18,34 @@
     "svelte-flowbite-boilerplate": "bin/index.cjs"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "tailwindcss": "^3.3.2",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2"
-
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.2",
+    "tailwindcss": "^3.3.6",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10"
   },
   "type": "module",
   "dependencies": {
-    "@floating-ui/dom": "^1.5.1",
+    "@floating-ui/dom": "^1.5.3",
     "@popperjs/core": "^2.11.8",
-    "@sveltejs/adapter-static": "^2.0.3",
+    "@sveltejs/adapter-static": "^3.0.0",
     "classnames": "^2.3.2",
-    "dayjs": "^1.11.9",
-    "flowbite": "^1.8.0",
-    "flowbite-svelte": "^0.40.2",
-    "flowbite-svelte-icons": "^0.3.6",
-    "flowbite-typography": "^1.0.3",
-    "tailwind-merge": "^1.14.0",
-    "values.js": "^2.1.1",
+    "command-exists": "^1.2.9",
     "cross-spawn": "^7.0.3",
-    "command-exists": "^1.2.9"
+    "dayjs": "^1.11.10",
+    "flowbite": "^2.2.1",
+    "flowbite-svelte": "^0.44.20",
+    "flowbite-svelte-icons": "^0.4.5",
+    "flowbite-typography": "^1.0.3",
+    "svelte-i18n": "^4.0.0",
+    "tailwind-merge": "^2.1.0",
+    "values.js": "^2.1.1"
   }
 }
