--- a/package.json
+++ b/package.json
@@ -18,34 +18,33 @@
     "svelte-flowbite-boilerplate": "bin/index.cjs"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.4.3",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "svelte": "^4.2.19",
-    "svelte-check": "^3.6.2",
-    "tailwindcss": "^3.3.6",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.2.14"
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.8.1",
+    "@sveltejs/vite-plugin-svelte": "^4.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.5",
+    "postcss-load-config": "^6.0.1",
+    "svelte": "^5.2.2",
+    "svelte-check": "^4.0.9",
+    "tailwindcss": "^3.4.15",
+    "tslib": "^2.8.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11"
   },
   "type": "module",
   "dependencies": {
-    "@floating-ui/dom": "^1.5.3",
+    "@floating-ui/dom": "^1.6.12",
     "@popperjs/core": "^2.11.8",
-    "@sveltejs/adapter-static": "^3.0.0",
-    "classnames": "^2.3.2",
+    "classnames": "^2.5.1",
     "command-exists": "^1.2.9",
-    "cross-spawn": "^7.0.3",
-    "dayjs": "^1.11.10",
-    "flowbite": "^2.2.1",
-    "flowbite-svelte": "^0.44.20",
-    "flowbite-svelte-icons": "^0.4.5",
-    "flowbite-typography": "^1.0.3",
-    "svelte-i18n": "^4.0.0",
-    "tailwind-merge": "^2.1.0",
+    "cross-spawn": "7.0.5",
+    "dayjs": "^1.11.13",
+    "flowbite": "^2.5.2",
+    "flowbite-svelte": "^0.47.3",
+    "flowbite-svelte-icons": "^2.0.2",
+    "flowbite-typography": "^1.0.4",
+    "svelte-i18n": "^4.0.1",
+    "tailwind-merge": "^2.5.4",
     "values.js": "^2.1.1"
   }
 }
